--- a/hand/package.json
+++ b/hand/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@google/maps": "^0.5.5",
     "axios": "^0.18.0",
-    "prompt": "^1.0.0"
+    "prompt": "^1.0.0",
+    "shelljs": "^0.8.3"
   },
   "devDependencies": {
     "eslint": "^5.15.2",
