--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@google/maps": "^0.5.5",
     "axios": "^0.18.0",
     "prompt": "^1.0.0",
+    "puppeteer": "^1.16.0",
     "shelljs": "^0.8.3"
   },
   "devDependencies": {
